Change title and content for Valentine's theme

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
-  <title>Friendship Goal 🤝</title>
+  <title>Valentine 💕</title>
 
   <style>
     * {
@@ -130,7 +130,7 @@
   </script>
 
   <div class="container" id="main">
-    <h1>PREETI 💕<br>WILL YOU BE MY FRIEND?</h1>
+    <h1>PRETTY 💕<br>WILL YOU BE MY VALENTINE MISHTEE?</h1>
 
     <div class="buttons">
       <button id="yesBtn">YES 🤝</button>
@@ -141,7 +141,7 @@
   <button id="noBtn">NO 😈</button>
 
   <div class="container result" id="result">
-    <h2>I KNEW THAT NOW WE ARE CHUDY BUDDY .😉🔥</h2>
+    <h2>I KNEW THAT YOU LOVE ME. 😉🔥</h2>
     <img src="https://media.giphy.com/media/l0MYt5jPR6QX5pnqM/giphy.gif" alt="dancing gif">
   </div>
 
@@ -200,3 +200,4 @@
 
 </body>
 </html>
+
